All coverage objective reached, controller code cleaning performed, unnecessary server logs removed