@@ -1,5 +1,6 @@
 package it.polimi.ingsw.codexnaturalis.controller;
 
+import java.rmi.RemoteException;
 import java.util.Collections;
 import java.util.List;
 
@@ -40,7 +41,7 @@ public class InitState extends ControllerState {
 
     /**
      * InitState's constructor
-     * 
+     *
      * @param game it's used to link the state with the game it has to model
      */
     public InitState(Game game, RmiServer rmiServer, SocketServer socketServer) {
@@ -49,18 +50,14 @@ public class InitState extends ControllerState {
         this.resPar = new ResourceParser();
         this.initPar = new InitialParser();
         this.initCards = initPar.parse();
-
+        Collections.shuffle(initCards);
         // For demo purposes
         // Collections.shuffle(initCards, new Random(110110110));
-
-        Collections.shuffle(initCards);
         this.objPar = new ObjectiveParser();
         this.objCards = objPar.parse();
-
+        Collections.shuffle(objCards);
         // For demo purposes
         // Collections.shuffle(objCards, new Random(110110110));
-
-        Collections.shuffle(objCards);
     }
 
     /**
@@ -68,13 +65,8 @@ public class InitState extends ControllerState {
      * resource decks which are then shuffled.
      */
     private void createDecks() {
-        // Creates instances of the needed parser
-        // FIXME: since they are attributes altready present when the state in born we
-        // can avoid to create new parser (use this.)
-        resPar = new ResourceParser();
-        goldPar = new GoldParser();
         // Creates an instance of deck and assigns it to the Game
-        super.game.setDeck(new Deck(goldPar.parse(), resPar.parse()));
+        super.game.setDeck(new Deck(this.goldPar.parse(), this.resPar.parse()));
         // Shuffles the decks
         super.game.getDeck().shuffleGoldDeck();
         super.game.getDeck().shuffleResourceDeck();
@@ -83,27 +75,27 @@ public class InitState extends ControllerState {
     /**
      * Allows to set first player's parameter and to let the game recognize the
      * current player
-     * 
+     *
      * @param nick       first player's nickname
      * @param color      first player's chosen color
      * @param numPlayers first player's chosen number of competitors
      */
     private void createFirstPlayer(String nick, String password, Color color, int numPlayers, String clientId)
             throws IllegalCommandException {
-        // TODO: togliere dal costruttore di Players il nickname e il colore e istituire
-        // dei setter specifici
-        Player player = new Player(nick, password, color);
+
+        Player player = new Player(nick, password);
+        player.setColor(color);
 
         super.game.getPlayers().add(player);
         super.game.getConnected().put(player, true);
         super.game.getFromPlayerToId().put(player, clientId);
         // [ ] Decide who plays first
-        super.game.setCurrentPlayer(super.game.getPlayers().get(0));
+        super.game.setCurrentPlayer(super.game.getPlayers().getFirst());
         super.game.setNumPlayers(numPlayers); // throws illegal command exc
         super.game.addParticipant();
         // FIXME: clean this up
         super.game.getBoard().updateActualScore(player, 0); // throws illegal command exc
-        // FIXME: this is a temporary solution
+        // Uncomment to start the match with an increased score for player
         // super.game.getBoard().updateActualScore(player, 19);
 
     }
@@ -112,9 +104,8 @@ public class InitState extends ControllerState {
      * Builds a new hand for each player and fills each hand with the right number
      * of cards drawn from the right deck. The hand is made of 2 resource card and a
      * gold one randomly selected from the deck.
-     * 
+     *
      * @param numPlayers it's needed to know how many hands deal
-     * @throws IllegalCommandException
      */
     private void dealHands(int numPlayers) throws IllegalCommandException {
 
@@ -166,7 +157,7 @@ public class InitState extends ControllerState {
     /**
      * Performs one after the other the sequence of actions needed for the game's
      * set-up phase
-     * 
+     *
      * @param nick       needed to identify the player
      * @param color      needed for GUI's purposes
      * @param numPlayers needed for dealing hands and cards issues
@@ -174,14 +165,19 @@ public class InitState extends ControllerState {
     @Override
     public void initialized(String clientId, String nick, String password, Color color, int numPlayers) {
         Event event = null;
+
         try {
+            // If the creator inserted an invalid number of player the game ends
+            if (numPlayers < 2 || numPlayers > 4)
+                throw new IllegalCommandException("Number of players has to be between 2 and 4!");
+
             createDecks();
 
-            game.setBoard(new Board()); // FIXME: not amazing to do this here
-            game.getBoard().addUncoveredCard(game.getDeck().drawResourceCard()); // FIXME
-            game.getBoard().addUncoveredCard(game.getDeck().drawResourceCard()); // FIXME
-            game.getBoard().addUncoveredCard(game.getDeck().drawGoldCard()); // FIXME
-            game.getBoard().addUncoveredCard(game.getDeck().drawGoldCard()); // FIXME
+            game.setBoard(new Board());
+            game.getBoard().addUncoveredCard(game.getDeck().drawResourceCard());
+            game.getBoard().addUncoveredCard(game.getDeck().drawResourceCard());
+            game.getBoard().addUncoveredCard(game.getDeck().drawGoldCard());
+            game.getBoard().addUncoveredCard(game.getDeck().drawGoldCard());
 
             createFirstPlayer(nick, password, color, numPlayers, clientId);
             dealHands(numPlayers);
@@ -195,15 +191,16 @@ public class InitState extends ControllerState {
             super.game.setState(new WaitPlayerState(super.game, super.rmiServer, super.socketServer));
 
         } catch (IllegalCommandException e) {
+            super.game.pushEvent(e.getMessage());
             event = new ErrorEvent(clientId, game.getGameId(), e.getMessage());
-        } catch (Exception e) {
-            e.printStackTrace();
         }
 
         super.rmiServer.sendEvent(event);
         try {
             super.socketServer.sendEvent(event);
         } catch (Exception e) {
+            String noSer = "No server found";
+            super.game.pushEvent(noSer);
             e.printStackTrace();
         }
     }
@@ -219,11 +216,15 @@ public class InitState extends ControllerState {
      */
     @Override
     public void joinGame(String clientId, String nickname, String password, Color color) {
-        Event event = new ErrorEvent(clientId, game.getGameId(), "Game not created yet");
+        String error = "Game not created yet";
+        super.game.pushEvent(error);
+        Event event = new ErrorEvent(clientId, game.getGameId(), error);
         super.rmiServer.sendEvent(event);
         try {
             super.socketServer.sendEvent(event);
         } catch (Exception e) {
+            String noSer = "No server found";
+            super.game.pushEvent(noSer);
             e.printStackTrace();
         }
     }
@@ -240,11 +241,15 @@ public class InitState extends ControllerState {
      */
     @Override
     public void chooseSetUp(String clientId, Player nickname, Boolean side, ObjectiveCard objCard) {
-        Event event = new ErrorEvent(clientId, game.getGameId(), "Game not set up yet");
+        String error = "Game not set up yet";
+        super.game.pushEvent(error);
+        Event event = new ErrorEvent(clientId, game.getGameId(), error);
         super.rmiServer.sendEvent(event);
         try {
             super.socketServer.sendEvent(event);
         } catch (Exception e) {
+            String noSer = "No server found";
+            super.game.pushEvent(noSer);
             e.printStackTrace();
         }
     }
@@ -262,14 +267,19 @@ public class InitState extends ControllerState {
      */
     @Override
     public void placedCard(String clientId, Player player, Card father, Card placeThis, String position,
-            Boolean frontUp) {
-        Event event = new ErrorEvent(clientId, game.getGameId(), "Can't place card yet");
+                           Boolean frontUp) {
+        String error = "Can't place card yet";
+        super.game.pushEvent(error);
+        Event event = new ErrorEvent(clientId, game.getGameId(), error);
         super.rmiServer.sendEvent(event);
         try {
             super.socketServer.sendEvent(event);
         } catch (Exception e) {
+            String noSer = "No server found";
+            super.game.pushEvent(noSer);
             e.printStackTrace();
         }
+
     }
 
     /**
@@ -278,16 +288,20 @@ public class InitState extends ControllerState {
      *
      * @param clientId The client ID attempting to place the card.
      * @param player   The player attempting to place the card.
-     * @param card     The card to draw.
-     * @param fromDeck The deck from which the card is drawn.
+     * @param card     The card to draw
+     * @param fromDeck The deck from where to draw
      */
     @Override
     public void drawnCard(String clientId, Player player, Card card, String fromDeck) {
-        Event event = new ErrorEvent(clientId, game.getGameId(), "Can't draw card yet");
+        String error = "Can't draw card yet";
+        super.game.pushEvent(error);
+        Event event = new ErrorEvent(clientId, game.getGameId(), error);
         super.rmiServer.sendEvent(event);
         try {
             super.socketServer.sendEvent(event);
         } catch (Exception e) {
+            String noSer = "No server found";
+            super.game.pushEvent(noSer);
             e.printStackTrace();
         }
     }
@@ -295,16 +309,20 @@ public class InitState extends ControllerState {
     /**
      * Handles disconnection of a client from the game shutting it down and sending
      * a ForcedEndEvent to the other players
-     * 
+     *
      * @param clientId The client identifier.
      */
     @Override
     public void disconnect(String clientId) {
-        Event event = new ForcedEndEvent(game.getGameId(), "Game was shut down due to clients' disconnections");
+        String error = "Game was shut down due to clients' disconnections";
+        super.game.pushEvent(error);
+        Event event = new ForcedEndEvent(game.getGameId(), error);
         super.rmiServer.sendEvent(event);
         try {
             super.socketServer.sendEvent(event);
         } catch (Exception e) {
+            String noSer = "No server found";
+            super.game.pushEvent(noSer);
             e.printStackTrace();
         }
         super.game.setState(new ForcedEndState(super.game, super.rmiServer, super.socketServer));
@@ -312,18 +330,22 @@ public class InitState extends ControllerState {
 
     /**
      * Handles a player's attempt to rejoin the game.
-     * 
+     *
      * @param clientId The client identifier.
      * @param nickname The nickname of the client.
      * @param password The password of the client.
      */
     @Override
     public void rejoinGame(String clientId, String nickname, String password) {
-        Event event = new ErrorEvent(clientId, game.getGameId(), "Can't rejoin game now");
+        String error = "Can't rejoin game now";
+        super.game.pushEvent(error);
+        Event event = new ErrorEvent(clientId, game.getGameId(), error);
         super.rmiServer.sendEvent(event);
         try {
             super.socketServer.sendEvent(event);
         } catch (Exception e) {
+            String noSer = "No server found";
+            super.game.pushEvent(noSer);
             e.printStackTrace();
         }
     }
